# namehack.club

./: .gitignore  Pipfile  README.md  aks.hay.yml  akshay.pendyala.yml  astro.config.mjs  build.py  ghpr.py  manage.py  netlify.toml  package-lock.json  package.json  pyproject.toml  requirements.txt  scan.py  wrangler.jsonc
.github/workflows/: build.yml
cli/: __init__.py  base.py  build.py  clean.py  ghpr.py  model.py  scan.py  serve.py  validate.py
names/: abrah.am.yml  abraham.yml  adomas.yml  aka.sh.yml  akse.li.yml  alber.to.yml  aldwin.yml  alejand.ro.yml  alfre.do.yml  alfredo.yml  alista.ir.yml  alpe.ren.yml  alva.ro.yml  alvaro.yml  alvin.yml  ama.to.yml  amed.ee.yml  anastas.io.yml  andr.ee.yml  andr.is.yml  anne.li.yml  antonio.yml  aoibhi.nn.yml  apollinai.re.yml  ar.to.yml  aral.yml  aristid.es.yml  arn.ie.yml  arv.in.yml  atti.la.yml  avital.yml  bad.al.yml  balthaz.ar.yml  barnes.yml  barto.li.yml  baudo.in.yml  bella.my.yml  benedetto.yml  benvenuto.yml  ber.to.yml  (+290 more)
scripts/: check-domains.js  ghpr.py  scan.py
src/components/: Analytics.astro  Counter.jsx  NameLink.astro
src/config/: analytics.js
src/content/: config.ts
src/content/blog/: getting-started-with-astro.md  integrating-react-with-astro.md  tailwind-css-in-astro.md
src/content/names/: akr.am.yml  alberi.ch.yml  alejand.ro.yml  alista.ir.yml  ang.us.yml  anib.al.yml  anie.la.yml  ann.ie.yml  antwa.in.yml  aoibhi.nn.yml  (+123 more)
src/layouts/: CenteredLayout.astro  StandardLayout.astro
src/pages/: 404.astro  index.astro
src/styles/: global.css
static/: base.css
templates/: index.html
(+2 files in other folders)
