[project]
name = "namehackclub"
version = "1.0.0"
description = "An exclusive club of geeks that own the domain hack to their name."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click>=8.1.7",
    "jinja2>=3.1.4",
    "unidecode>=1.3.8",
    "ymlstash>=1.2.1",
]

[dependency-groups]
dev = [
    "aiohttp>=3.10.10",
    "requests>=2.32.3",
]

[project.scripts]
cli = "cli:cli"
build = "cli.build:build"
serve = "cli.serve:serve"